Fix z-index issue with portal-top, which made it impossible to use the user menu.

--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -34,7 +34,7 @@ $portal-top-bg-color: $page-bg-color !default;
     background-color: white;
     padding: 7px 0;
     position: relative;
-    z-index: 0;
+    z-index: 1;
     height: auto;
   }
 }
